<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleEntryActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/entry_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/entry_date"
                android:textAlignment="viewStart"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:text="@string/entry_message" />

        </LinearLayout>




    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="569dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="114dp"
            android:text="@string/edit"
            app:backgroundTint="@color/rundumdogBG"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="569dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="114dp"
            android:text="@string/delete"
            app:backgroundTint="@color/rundumdogBG"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>