<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginActivity"
    android:id="@+id/loginpage">
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/baseline_pets_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="132dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <!-- TextView for heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"/>

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="E-Mail" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Passwort"
        android:inputType="textPassword" />

    <!-- Button for Login with text "Login" -->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anmelden"
        app:backgroundTint="@color/rundumdogBG"/>

    <!-- ProgressBar for Loading Time -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_login"
        android:textAlignment="center" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:backgroundTint="@color/rundumdogBG"/>

</LinearLayout>